apps-helm/argocd/manifests/tailscale-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    tailscale.com/proxy-group: ingress-proxies
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - argocd
  defaultBackend:
    service:
      name: argocd-server
      port:
        name: http
